# gstreamer-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FormatFile.cmake  README.md  SetupDoxygen.cmake  SetupGStreamer.cmake  SetupGoogleTest.cmake
include/: CMakeLists.txt  Prelude.hpp  core.hpp
include/core/: Bin.hpp  Bus.hpp  CMakeLists.txt  Clock.hpp  Element.hpp  ElementFactory.hpp  Message.hpp  Object.hpp  Pad.hpp  Pipeline.hpp  README.md
src/: CMakeLists.txt  core.cpp
src/core/: Bin.cpp  Bus.cpp  CMakeLists.txt  Element.cpp  ElementFactory.cpp  Message.cpp  Object.cpp  Pad.cpp  Pipeline.cpp
test/: demo.cpp
